PIT mutations update